example/js_basic_01_3.js
const X_CONSTANT = 1; // 코드 스타일 -> 상수는 대부분 대문자와 언더바로 구성, 파일 처음에 기재
let y = 2;
y = X_CONSTANT+y;
console.log(y); // 3
// X_CONSTANT = X_CONSTANT+1; // error
